Restaura estrutura completa do site com logo, menu e seções

--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eva Joaquina | Moda Feminina</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <img src="logo-eva-adaptada.png" alt="Logo Eva Joaquina" class="logo" />
+      <nav>
+        <ul>
+          <li><a href="#produtos-realistas">Produtos</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h1>Moda Feminina com Identidade</h1>
+      <p>Peças exclusivas para mulheres únicas</p>
+    </section>
+
+
 <section id='produtos-realistas'>
   <h2>🧥 Vitrine Eva Joaquina</h2>
   <div class='grid'>
@@ -9,7 +39,7 @@
         <a href="https://wa.me/5598986008796?text=Oi%2C%20quero%20comprar%20a%20peça%20Conjunto%20Marrom!" class="btn zap">WhatsApp</a>
         <a href="https://link.mercadopago.com.br/evajoaquina" class="btn pagar">Cartão / Pix</a>
     </div>
-    
+
     <div class="card">
         <img src="macacao-azul.webp" alt="Macacão Azul com Estampa">
         <h3>Macacão Azul com Estampa</h3>
@@ -84,3 +114,26 @@
     
   </div>
 </section>
+
+ <section id="sobre">
+      <h2>🌹 A História da Eva Joaquina</h2>
+      <p>
+        Fundada em 2017, a Eva Joaquina é mais do que uma loja — é um tributo. O nome homenageia a mãe da fundadora, uma mulher forte, elegante e inesquecível.
+      </p>
+      <p>
+        Criada com amor, a loja tem como símbolo uma <strong>rosa vermelha</strong> e nasceu com a missão de vestir mulheres reais, com identidade, estilo e propósito — de jovens a mulheres maduras.
+      </p>
+    </section>
+
+    <section id="contato">
+      <h2>📲 Fale com a gente</h2>
+      <p>WhatsApp: <a href="https://wa.me/5598986008796">98 98600-8796</a></p>
+      <p>Instagram: <a href="#">@evajoaquinaoficial</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Eva Joaquina Moda Feminina | Desenvolvido por Camila</p>
+  </footer>
+</body>
+</html>
